Bug 143603 - Opening a simple presentation has UNDO active
Summary: Opening a simple presentation has UNDO active
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo ODF-Flat
  Show dependency treegraph
 
Reported: 2021-07-29 12:36 UTC by Mike Kaganski
Modified: 2024-09-05 08:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
A very simple FODP (771 bytes, application/vnd.oasis.opendocument.presentation)
2021-07-29 12:36 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2021-07-29 12:36:40 UTC
Created attachment 173947 [details]
A very simple FODP

Opening the attached presentation makes Impress activate UNDO button with two elements: "Delete Text Frame" and "Delete Title text".
Comment 1 BogdanB 2021-07-29 13:01:46 UTC
Confirm with
Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded

Also in
Version: 7.2.0.1.0+ (x64) / LibreOffice Community
Build ID: 2a265bdda19d86437c6eb4d8deb0057d5b45e97f
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 2 Aron Budea 2021-07-31 00:33:40 UTC
This is a regression from the following commit, bibisected using repo bibisect-44max.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=32c28a6d131284c1602f57a8220d1b736b538288
author		Maxime de Roucy <mderoucy@linagora.com>	2014-01-07 09:31:11 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2014-06-25 10:00:50 +0000

Resolves: #i74651# remove image via should change document state
Comment 3 QA Administrators 2023-09-13 03:17:21 UTC Comment hidden (obsolete)
Comment 4 Mike Kaganski 2024-09-04 17:58:24 UTC
https://gerrit.libreoffice.org/c/core/+/172872
Comment 5 Commit Notification 2024-09-04 19:59:10 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b61a0737e3600aadf42f28a15c70aface9ab61e

tdf#143603: disable undo in DrawDocShell::ImportFrom

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-09-05 08:44:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0a54d028fa8047b0c396fa182b7f3af5be660598

tdf#143603: disable undo in DrawDocShell::ImportFrom

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.