tdf#143603: disable undo in DrawDocShell::ImportFrom

Change-Id: I6fbc317d9f72f1bec70ff97e915487ac2b5a2f53
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172872
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins